Revert "fixed overlap for azure"
This reverts commit 03cc2f949af7a0d6a0d5e30356c62f8fdcedaa70.

--- a/src/client/src/containers/AzureLogin/styles.module.css
+++ b/src/client/src/containers/AzureLogin/styles.module.css
@@ -5,7 +5,7 @@
 
 .container {
   position: relative;
-  padding: 6vh;
+  padding: 10vh 6vh;
 }
 
 .signedIn {
@@ -13,8 +13,7 @@
 }
 
 .optionalFlag {
-  display: flex;
-  justify-content: center;
+  position: absolute;
   z-index: 1000;
   width: 100%;
   background-color: #0067b8;
